great-idea-website/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */




/* Header / Nav */

.container {
	padding: 50px 200px;
}

.logo {
	vertical-align: middle;
	margin-left: 50px;	
}

.navbar {
	/* padding-top: 50px; */
	width: 100%;
	padding-left: 10px;
	/* fixed navbar
	position: fixed;
	top: 30px;
	z-index: 1; */
	/* nothing to see here */
}


/* GENERAL */


a {
	text-align: center;
	margin-top: 20px;
	margin-right: 50px;
	text-decoration: none;
	color: gray;
	vertical-align: middle;
}


h1 {
	font-size: 70px;
	width: 100%;
}


hr {
	margin: 30px auto;
}



/* Intro  */


.intro {
	margin-top: 150px;
	margin-bottom: 150px;
}

.intro-text {
	width: 49%;
	/* position: relative; */
	vertical-align: middle;
	horizontal-align: middle;
	text-align: center;
}

.intro-img {
	position: absolute;
	right: 225px;
	top: 200px;
	vertical-align: middle;
}

.button {
	background-color: lightgray;
	display: inline-block;
	font-size: 24px;
	padding: 14px 40px;
	text-align: center;
	position: relative;
	left: 20px;
	margin-top: 10px;
}



/* Features / About */

.features-about {
	margin-top: 35px;
	position: relative;
}

.features-text, .about-text {
	display: inline-block;
	width: 49%;
	margin: 0;
	line-height: 1.2;
}


.middle-img {
	display: block;
	margin: 30px auto;
	text-align: center;
}



/* Description */

.description-text {
	margin-top: 35px;
	position: relative;
	line-height: 1.2;
}

.services-text, .product-text, .vision-text {
	display: inline-block;
	width: 32%;
	margin: 0;
}





/* Footer */


footer {
	margin: 75px auto 150px;
	text-align: center;
}




/* FOR MOBILE / SMALLER SCREENS */

@media (max-width: 1144px) {
	.intro-text {
		text-align: center;
		position: static;
		width: 100%;
	}
	.intro-img {
		position: static;
		margin: 0 50% 25px 100px;
		horizontal-align: middle;
		width: 50%;
	}
	.middle-img {
		width: 80%;
	}
}

